objects/infy_dm__Test_Obj_to_Mask__c.object
<CustomObject>
    <fields>
        <fullName>infy_dm__About_me__c</fullName>
        <label>About me</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>infy_dm__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>infy_dm__My_Location__c</fullName>
        <label>My Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>infy_dm__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>infy_dm__Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>value1</fullName>
                </value>
                <value>
                    <fullName>value2</fullName>
                </value>
                <value>
                    <fullName>value3</fullName>
                </value>
                <value>
                    <fullName>value4</fullName>
                </value>
                <value>
                    <fullName>value5</fullName>
                </value>
                <value>
                    <fullName>value6</fullName>
                </value>
                <value>
                    <fullName>value7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>infy_dm__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infy_dm__Task_Name__c</fullName>
        <label>Task Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__city__c</fullName>
        <label>city</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__city_with_Name__c</fullName>
        <formula>infy_dm__city__c &amp; &quot; &quot; &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>city with Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__dependent__c</fullName>
        <label>dependent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>infy_dm__Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                </value>
                <value>
                    <fullName>v</fullName>
                </value>
                <value>
                    <fullName>b</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>infy_dm__field1_Enc__c</fullName>
        <label>field1 Enc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>infy_dm__field2_cEnc__c</fullName>
        <label>field2__c Enc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>infy_dm__isUseful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUseful?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infy_dm__roll_Num__c</fullName>
        <externalId>true</externalId>
        <label>roll Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infy_dm__scheduled_Date__c</fullName>
        <label>scheduled Date</label>
        <type>Date</type>
    </fields>
    <label>Test Obj to Mask</label>
    <listViews>
        <fullName>infy_dm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestObjMask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Obj to Mask</pluralLabel>
    <recordTypes>
        <fullName>infy_dm__Record_Type1</fullName>
        <active>true</active>
        <label>Record Type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>infy_dm__Record_Type2</fullName>
        <active>true</active>
        <label>Record Type2</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>infy_dm__validationOnTesting</fullName>
        <active>false</active>
        <errorConditionFormula>!BEGINS(infy_dm__Task_Name__c, &quot;T&quot;)</errorConditionFormula>
        <errorMessage>Doesnot start with T</errorMessage>
    </validationRules>
</CustomObject>